[DEV-23304] Fixed galleries spacing

--- a/src/components/ContentRenderer/components/Gallery.module.scss
+++ b/src/components/ContentRenderer/components/Gallery.module.scss
@@ -1,6 +1,7 @@
 .chunks {
     display: flex;
     flex-direction: column;
+    margin: $spacing-6 0;
 }
 
 .chunk :global(.prezly-slate-gallery) {
